--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,45 +1,39 @@
-name: "CodeQL"
-
-on:
-  push:
-    branches: [ master, version/**/* ]
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ master, version/**/* ]
-  schedule:
-    - cron: '45 0 * * 5'
-
 jobs:
   analyze:
     name: Analyze
-    runs-on: ubuntu-latest
     permissions:
       actions: read
       contents: read
       security-events: write
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'java' ]
-
+    runs-on: self-hosted
     steps:
-    - name: Checkout repository
+    - continue-on-error: true
+      name: Checkout repository
       uses: actions/checkout@v4
-    - name: Set up JDK
+    - continue-on-error: true
+      name: Set up JDK
       uses: actions/setup-java@v4
       with:
+        cache: gradle
+        distribution: temurin
         java-version: 21
-        cache: 'gradle'
-        distribution: 'temurin'
-
-    - name: Initialize CodeQL
+    - continue-on-error: true
+      name: Initialize CodeQL
       uses: github/codeql-action/init@v3
       with:
         languages: ${{ matrix.language }}
-
-    - name: Autobuild
+    - continue-on-error: true
+      name: Autobuild
       uses: github/codeql-action/autobuild@v3
-
-    - name: Perform CodeQL Analysis
+    - continue-on-error: true
+      name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
+    strategy:
+      fail-fast: false
+      matrix:
+        language:
+        - java
+name: CodeQL
+on:
+  repository_dispatch:
+    types: trigger-ga___codeql-analysis.yml
